...
                                <rect key="frame" x="20" y="570" width="560" height="30"/>
                                <color key="backgroundColor" red="0.76312921869999994" green="0.87515274570000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="home_comingsoon"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                <state key="normal" title="Home">
...
                                <rect key="frame" x="20" y="570" width="560" height="30"/>
                                <color key="backgroundColor" red="0.76312921869999994" green="0.87515274570000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="home_sadhana"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                <state key="normal" title="Home">
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ap6-ut-u1j">
                                <rect key="frame" x="0.0" y="344" width="600" height="225"/>
                                <accessibility key="accessibilityConfiguration" identifier="purposeoflife"/>
                                <state key="normal" image="whyareweborn-cropped"/>
                                <connections>
...
                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YOR-BZ-Tjy">
                                <rect key="frame" x="0.0" y="74" width="600" height="260"/>
                                <accessibility key="accessibilityConfiguration" identifier="howtobehappy"/>
                                <state key="normal" image="howtobehappy-cropped"/>
                                <connections>
...
                                <rect key="frame" x="20" y="570" width="560" height="30"/>
                                <color key="backgroundColor" red="0.76312921869999994" green="0.87515274570000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="sadhana_howtobehappy"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                <state key="normal" title="Sadhana - Spiritual Practice">
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WAM-k0-tM1">
                                <rect key="frame" x="20" y="70" width="105" height="125"/>
                                <accessibility key="accessibilityConfiguration" identifier="ramnavami"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="105" id="kQM-tj-mIf"/>
...
                            <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="749" verticalCompressionResistancePriority="749" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Cv-GN-SPO">
                                <rect key="frame" x="20" y="230" width="105" height="125"/>
                                <accessibility key="accessibilityConfiguration" identifier="hanumanjayanthi"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="105" id="Mbf-ON-94p"/>
...
                                <rect key="frame" x="20" y="570" width="560" height="30"/>
                                <color key="backgroundColor" red="0.76312921869999994" green="0.87515274570000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="festivals_ramnavami"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                <state key="normal" title="Festivals">
...
                                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g4g-9Z-P8g" userLabel="calendar">
                                                <rect key="frame" x="10" y="124" width="150" height="111"/>
                                                <accessibility key="accessibilityConfiguration" identifier="calendar"/>
...
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qvQ-Rf-RgJ" userLabel="muhurt">
                                                <rect key="frame" x="440" y="124" width="150" height="111"/>
                                                <accessibility key="accessibilityConfiguration" identifier="calendar"/>
...
                                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rG5-6s-UeG" userLabel="holy festivals">
                                                <rect key="frame" x="10" y="285" width="150" height="111"/>
                                                <accessibility key="accessibilityConfiguration" identifier="holyfestivals"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="150" id="9mI-7r-2S4"/>
...
                                                    <constraint firstAttribute="height" constant="111" id="LAf-nU-XGT"/>
                                                </constraints>
                                                <state key="normal" image="glimpseofhindutva"/>
                                                <connections>
                                                    <segue destination="7mb-29-CMY" kind="show" id="RZs-z8-xdf"/>
...
                                                    <constraint firstAttribute="height" constant="111" id="pNn-Iw-POA"/>
                                                </constraints>
                                                <state key="normal" image="sadhana"/>
                                                <connections>
                                                    <segue destination="1o7-56-kZD" kind="show" id="Ep4-1I-5Mc"/>
...
